Fix a0 version check

--- a/assignment/a0/a0.ipynb
+++ b/assignment/a0/a0.ipynb
@@ -13,24 +13,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
+      "execution_count": 1,
+      "metadata": {
+        "scrolled": true
+      },
       "outputs": [],
       "source": [
         "# Version checks\n",
         "import importlib\n",
-        "def version_less(v1, v2):\n",
+        "def version_greater_equal(v1, v2):\n",
         "    for x, y in zip(v1.split('.'), v2.split('.')):\n",
-        "        if int(x) < int(y):\n",
-        "            return True\n",
-        "    return False\n",
+        "        if int(x) != int(y):\n",
+        "            return int(x) > int(y)\n",
+        "    return True\n",
         "    \n",
+        "assert version_greater_equal('1.2.3', '0.1.1')\n",
+        "assert version_greater_equal('1.2.3', '0.5.1')\n",
+        "assert version_greater_equal('1.2.3', '1.2.3')\n",
+        "assert version_greater_equal('0.22.0', '0.20.3')\n",
+        "assert not version_greater_equal('1.1.1', '1.2.3')\n",
+        "assert not version_greater_equal('0.5.1', '1.2.3')\n",
+        "assert not version_greater_equal('0.20.3', '0.22.0')\n",
+        "\n",
         "def version_check(libname, min_version):\n",
         "    m = importlib.import_module(libname)\n",
         "    print (\"%s version %s is \" % (libname, m.__version__))\n",
-        "    print (\"out-of-date. Please upgrade!\"\n",
-        "           if version_less(m.__version__, min_version) \n",
-        "           else \"OK\")\n",
+        "    print (\"OK\"\n",
+        "           if version_greater_equal(m.__version__, min_version) \n",
+        "           else \"out-of-date. Please upgrade!\")\n",
         "    \n",
         "version_check(\"numpy\", \"1.13\")\n",
         "version_check(\"matplotlib\", \"2.1\")\n",
@@ -38,15 +48,6 @@
         "version_check(\"nltk\", \"3.2.4\")\n",
         "version_check(\"tensorflow\", \"1.4.1\")"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
