Fix some glitches with A1 (nothing major)

--- a/assignment/a1/information_theory.ipynb
+++ b/assignment/a1/information_theory.ipynb
@@ -201,7 +201,7 @@
         "\n",
         "If we design an optimal code for $Q$, we use $-\\log_2 Q(x)$ bits for message $x$. Then we average this over $x \\sim P$ to get:\n",
         "\n",
-        "$$ \\text{CE}(P,Q) = \\sum_{x} - P(x) \\log_2 Q(x) $$\n",
+        "$$ \\text{CE}(P,Q) = \\sum_{x} - P(x) \\log_2 Q(x) = \\mathrm{E}_{x \\sim P(x)}\\left[ -\\log_2 Q(x) \\right] $$\n",
         "\n",
         "Since we \"crossed\" the code from $Q$ and used it on $P$, this is known as the [**cross-entropy**](https://en.wikipedia.org/wiki/Cross_entropy). Note that $ \\text{CE}(P,Q) \\ge H(P) $, because we know that the code trained on $Q$ can't possibly be better than the optimal code on $P$ itself! \n",
         "\n",
@@ -209,7 +209,10 @@
         "$$ \\text{CE}(P,Q)(x) = \\sum_{y'} -P(y'\\ |\\ x) \\log_2 Q(y'\\ |\\ x) $$\n",
         "It's common to average over $x$ and to approximate $P(y\\ |\\ x)$ with discrete samples $(x,y)$ from a test set $T$, in which case we get:\n",
         "\n",
-        "$$ \\text{CE}(P,Q) \\approx \\sum_{(x,y) \\in T} \\sum_{y'} -\\mathbb{1}[y = y'] \\log_2 Q(y'\\ |\\ x) = \\sum_{(x,y) \\in T} -\\log_2 Q(y\\ |\\ x) $$\n",
+        "$$ \\text{CE}(P,Q) \n",
+        "\\approx \\frac{1}{|T|} \\sum_{(x,y) \\in T} \\sum_{y'} -\\mathbb{1}[y = y'] \\log_2 Q(y'\\ |\\ x) \n",
+        "= \\frac{1}{|T|} \\sum_{(x,y) \\in T} -\\log_2 Q(y\\ |\\ x) \n",
+        "$$\n",
         "\n",
         "We'll commonly also write this using natural logarithms, but you can always convert between the two by the formula $ \\log_2(x) = \\log_2(e) \\cdot \\ln(x) $."
       ]
@@ -242,12 +245,12 @@
       "source": [
         "# Exercises (12 points)\n",
         "\n",
-        "### (a) Pointwise Mutual Information\n",
+        "### A. Pointwise Mutual Information\n",
         "\n",
         "1. If $P(\\text{rainy}, \\text{cloudy})= 0.1$, $P(\\text{rainy}) = 0.2$ and $P(\\text{cloudy}) = 0.8$, what is $\\text{PMI}(\\text{rainy}, \\text{cloudy})$?\n",
         "2. Imagine $x$ is some word in a sentence, and $y$ is the next word in the sentence.  Imagine $P(\\text{washington})=0.01$, $P(\\text{post}) = 0.01$, and $P(\\text{washington}, \\text{post}) = 0.002$.  What is $\\text{PMI}(\\text{washington}, \\text{post})$?  Speculate why this kind of metric might be useful.\n",
         "3. The average PMI, otherwise known as **Mutual Information** is defined as:<br>\n",
-        "$$\\text{MI}(x,y) = \\sum_{x,y} p(x,y) \\times \\text{PMI}(x,y)$$\n",
+        "$$\\text{MI}(x,y) = \\mathrm{E}_{x,y}\\left[ \\text{PMI}(x,y) \\right] = \\sum_{x,y} p(x,y) \\cdot \\text{PMI}(x,y)$$\n",
         "If $X$ and $Y$ are independent, $MI(X,Y) = 0$.<br>  Is the converse true? (If not, give a stronger condition based on PMI that does imply that $X$ and $Y$ are independent.)"
       ]
     },
@@ -255,7 +258,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Answers to Part (a)\n",
+        "### A. Your Answers\n",
         "\n",
         "1. _Your text here!_\n",
         "2. _Your text here!_\n",
@@ -268,7 +271,7 @@
         "collapsed": true
       },
       "source": [
-        "### (b) Entropy\n",
+        "### B. Entropy\n",
         "\n",
         "1. What if you had 128 messages, sending each with a probability of 1/128?  What's the expected number of bits?  What is the entropy of this distribution? What about 1024 messages each with probability 1/1024?\n",
         "2. Consider the following sentences, and a hypothetical distribution over words that could fill in the blank:  \n",
@@ -282,7 +285,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Answers to Part (b)\n",
+        "### B. Your Answers\n",
         "\n",
         "1. _Your text here!_\n",
         "2. _Your text here!_\n",
@@ -293,23 +296,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### (c) Cross-Entropy and KL Divergence\n",
+        "### C. Cross-Entropy and KL Divergence\n",
         "\n",
         "For the following questions, imagine you have a classification problem over four labels, $\\{0,1,2,3\\}$.  For some example $x_i$, the correct label is class $0$.  That is, our true distribution is $y_i = P(y\\ |\\ x_i) = [1, 0, 0, 0]$.  Your model generates this probability distribution over the classes: $\\hat{y}_i = \\hat{P}(y\\ |\\ x_i) = [0.8, 0.1, 0.05, 0.05]$.\n",
         "\n",
         "1.  Compute $\\text{CrossEntropy}(y, \\hat{y})$.\n",
-        "2.  When the label vector is \"one-hot\" as it is in this case (i.e. only a single category has any probability mass), do you actually need to compute everything?  Describe the simplification.\n",
-        "3.  What would $\\text{CrossEntropy}(y, \\hat{y})$ be if your model assigned all probability mass to the correct class (class 0)? (i.e. if $\\hat{y}_i = y_i = [1, 0, 0, 0]$)\n",
-        "4.  What if the model assigned all probability mass to class 1 instead?\n",
-        "5.  What if the model assigned $\\frac{1}{3}$ to each of classes 1, 2, and 3, and zero to class 0?\n",
-        "6.  Find $D_{KL}(y\\ ||\\ \\hat{y})$.  Compare it to your answer to 1."
+        "2.  Find $D_{KL}(y\\ ||\\ \\hat{y})$.  Compare it to your answer to (c1).\n",
+        "3.  When the label vector is \"one-hot\" as it is in this case (i.e. only a single category has any probability mass), do you actually need to compute everything?  Describe the simplification.\n",
+        "4.  What would $\\text{CrossEntropy}(y, \\hat{y})$ be if your model assigned all probability mass to the correct class (class 0)? (i.e. if $\\hat{y}_i = y_i = [1, 0, 0, 0]$)\n",
+        "5.  What if the model assigned all probability mass to class 1 instead?\n",
+        "6.  What if the model assigned $\\frac{1}{3}$ to each of classes 1, 2, and 3, and zero to class 0?"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Answers to Part (c)\n",
+        "### C. Your Answers\n",
         "\n",
         "1. _Your text here!_\n",
         "2. _Your text here!_\n",
@@ -318,15 +321,6 @@
         "5. _Your text here!_\n",
         "6. _Your text here!_"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
