Revert "Fix some glitches with A1 (nothing major)"
Revert to avoid merge conflicts in .ipynb. Please see FAQ on Piazza.

This reverts commit cb114383f6c2a5ea256a31fca3160ef33ccc1965.

--- a/assignment/a1/dp/dynamic_programming.ipynb
+++ b/assignment/a1/dp/dynamic_programming.ipynb
@@ -379,7 +379,7 @@
         "\n",
         "Unfortunately, while we computed the revenue available by cutting the bar, we didn't actually track the cuts we need to make in order to earn it!\n",
         "\n",
-        "## D. Coding Exercise\n",
+        "## Coding Exercise\n",
         "**Finish modifying the code (in the cell below)** to keep track of the cuts you made in order to achieve the optimal revenue.\n",
         "\n",
         "i.e. `potential_profit[4]` might be `(39.5, [1, 2])`."
@@ -570,7 +570,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## E. (Optional) Short Answer Questions:\n",
+        "## D. (Optional) Short Answer Questions:\n",
         "\n",
         "Give brief answers to the following in the cell below.\n",
         "\n",
@@ -595,7 +595,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## E. Answers (optional)\n",
+        "## D. Answers (optional)\n",
         "\n",
         "1. _Your answer here!_\n",
         "2. _Your answer here!_\n",
