--- a/materials/embeddings/embeddings.ipynb
+++ b/materials/embeddings/embeddings.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "On Assignment 3, we'll dig a bit deeper into the properties of these embeddings, and experiment with them on a classification task.\n",
     "\n",
-    "**Note:** If viewing on GitHub, please use this NBViewer link for proper rendering: http://nbviewer.jupyter.org/github/datasci-w266/2018-spring-main/blob/master/materials/week4/embeddings.ipynb"
+    "**Note:** If viewing on GitHub, please use this NBViewer link for proper rendering: http://nbviewer.jupyter.org/github/datasci-w266/2018-spring-main/blob/master/materials/embeddings/embeddings.ipynb"
    ]
   },
   {
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But as with bigrams, most of these will be zero. So, we'll define $C$ as a `scipy.sparse` matrix. Like the sparse dicts we used in the [language modeling demo](../../materials/week2/lm1.py), the sparse matrix will only store the nonzero elements we need.\n",
+    "But as with bigrams, most of these will be zero. So, we'll define $C$ as a `scipy.sparse` matrix. Like the sparse dicts we used in the [language modeling demo](../../materials/simple_lm/lm1.py), the sparse matrix will only store the nonzero elements we need.\n",
     "\n",
     "_**Mathematical note:**_  \n",
     "We can compute each element by sliding a window over each position $\\ell$ in the corpus. Suppose our window is size $W = 2K + 1$. Then:\n",
@@ -722,7 +722,7 @@
     "\n",
     "### PPMI\n",
     "\n",
-    "PPMI stands for Positive [Pointwise Mutual Information](https://en.wikipedia.org/wiki/Pointwise_mutual_information), which you've seen on [Assignment 1](../../assignment/a1/Information Theory.ipynb#1.-Pointwise-Mutual-Information). PMI is a generalization of the idea of correlation, but for arbitrary variables. Here, we're interested in the correlation between word $i$ and word $j$, where we take the samples to be all the word-word pairs in our corpus.  \n",
+    "PPMI stands for Positive [Pointwise Mutual Information](https://en.wikipedia.org/wiki/Pointwise_mutual_information), which you've seen on [Assignment 1](../../assignment/a1/information_theory.ipynb#Pointwise-Mutual-Information). PMI is a generalization of the idea of correlation, but for arbitrary variables. Here, we're interested in the correlation between word $i$ and word $j$, where we take the samples to be all the word-word pairs in our corpus.  \n",
     "Positive just means we'll truncate at zero: $\\text{PPMI}(i,j) = \\max(0, \\text{PMI}(i,j))$\n",
     "\n",
     "We'll apply PPMI as a transformation of our counts matrix. First, compute probabilities:\n",
